人狼のレイアウトを変更しました。

--- a/app/src/main/res/layout/activity_werewolf.xml
+++ b/app/src/main/res/layout/activity_werewolf.xml
@@ -44,6 +44,7 @@
         android:layout_height="60dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
+        android:background="#E35C5C"
         android:text="▶"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/number"
@@ -55,6 +56,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
+        android:background="#D2417EE8"
         android:text="◀"
         android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/number"
