--- a/app/src/main/res/layout/activity_werewolf_diviner_divined.xml
+++ b/app/src/main/res/layout/activity_werewolf_diviner_divined.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="村人"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="プレイヤー"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
@@ -37,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="1"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintStart_toEndOf="@+id/divedText"
         app:layout_constraintTop_toTopOf="parent" />
@@ -47,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="は"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintStart_toEndOf="@+id/divedPn"
         app:layout_constraintTop_toTopOf="parent" />
@@ -56,6 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="だ。"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/divPosition"
