--- a/app/src/main/res/layout/activity_werewolf_thief_changed.xml
+++ b/app/src/main/res/layout/activity_werewolf_thief_changed.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="村人"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/chText5"
@@ -24,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="プレイヤー"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
@@ -36,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="1"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintStart_toEndOf="@+id/chText"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="と"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintStart_toEndOf="@+id/chPn"
         app:layout_constraintTop_toTopOf="parent" />
@@ -55,6 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="役職を交換した。"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="あなたは"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,6 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="になった。"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/chPosition"
