--- a/app/src/main/res/layout/activity_werewolf_intro.xml
+++ b/app/src/main/res/layout/activity_werewolf_intro.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     android:background="#0F1260">
 
+    <ImageView
+        android:id="@+id/ImageView15"
+        android:layout_width="1000dp"
+        android:layout_height="match_parent"
+        android:background="@drawable/star"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.539"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
     <Button
         android:id="@+id/next"
         android:layout_width="wrap_content"
@@ -44,7 +56,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.576" />
+        app:layout_constraintVertical_bias="0.276" />
 
     <TextView
         android:id="@+id/textView6"
@@ -56,33 +68,23 @@
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.487" />
+        app:layout_constraintVertical_bias="0.2" />
 
-    <ImageButton
-        android:id="@+id/confirmationImageButton4"
-        android:layout_width="151dp"
-        android:layout_height="166dp"
-        android:background="@drawable/ok"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.923"
-        tools:ignore="MissingConstraints" />
+<!--    <ImageButton-->
+<!--        android:id="@+id/confirmationImageButton4"-->
+<!--        android:layout_width="120dp"-->
+<!--        android:layout_height="130dp"-->
+<!--        android:background="@drawable/ok"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintVertical_bias="0.823"-->
+<!--        tools:ignore="MissingConstraints" />-->
 
-    <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="980dp"
-        android:layout_height="336dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.541"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.007"
-        app:srcCompat="@drawable/star" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
