--- a/app/src/main/res/layout/activity_werewolf_position_config.xml
+++ b/app/src/main/res/layout/activity_werewolf_position_config.xml
@@ -17,7 +17,7 @@
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView11"
-        app:srcCompat="@drawable/fortuneteller" />
+        app:srcCompat="@drawable/diviner" />
 
     <ImageView
         android:id="@+id/imageView10"
@@ -321,16 +321,16 @@
         app:layout_constraintStart_toEndOf="@+id/teruNum"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <ImageButton
-        android:id="@+id/confirmationImageButton"
-        android:layout_width="91dp"
-        android:layout_height="103dp"
-        android:background="@drawable/hi"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.796"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="MissingConstraints" />
+<!--    <ImageButton-->
+<!--        android:id="@+id/confirmationImageButton"-->
+<!--        android:layout_width="91dp"-->
+<!--        android:layout_height="103dp"-->
+<!--        android:background="@drawable/hi"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.796"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintVertical_bias="1.0"-->
+<!--        tools:ignore="MissingConstraints" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
