--- a/app/src/main/res/layout/activity_werewolf_thief_not_changed.xml
+++ b/app/src/main/res/layout/activity_werewolf_thief_not_changed.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="役職を交換しなかった。"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
